RESOLVED FIXED117189
[EFL] File dialog of MiniBrowser have broken background.
https://bugs.webkit.org/show_bug.cgi?id=117189
Summary [EFL] File dialog of MiniBrowser have broken background.
Ryuan Choi
Reported 2013-06-04 03:48:23 PDT
elm_win should have bg. If not, background of elm_win will be broken on release build.
Attachments
Patch (1.82 KB, patch)
2013-06-04 04:06 PDT, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2013-06-04 04:06:05 PDT
Chris Dumez
Comment 2 2013-06-04 04:11:45 PDT
Comment on attachment 203677 [details] Patch LGTM, r=me. Thanks.
Ryuan Choi
Comment 3 2013-06-04 04:19:29 PDT
Ryuan Choi
Comment 4 2013-06-04 04:20:46 PDT
Comment on attachment 203677 [details] Patch Clearing flags after landed manually. Thank you for your quich review.
Note You need to log in before you can comment on or make changes to this bug.