[EFL] File dialog of MiniBrowser have broken background. https://bugs.webkit.org/show_bug.cgi?id=117189

Reviewed by Christophe Dumez.

* MiniBrowser/efl/main.c:
(on_file_chooser_request): Added elm_bg for elm_win of file chooser.

Canonical link: https://commits.webkit.org/135449@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151166 268f45cc-cd09-0410-ab3c-d52691b4dbfc